[project]
name = "gslm"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Wataru Nakata", email = "wataru9871@gmail.com" }
]
dependencies = [ "hydra-core~=1.3.2", "webdataset~=0.2.57", "lightning-vocoders @ git+https://github.com/Wataru-Nakata/ssl-vocoders"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
