[project]
name = "gslm"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Wataru Nakata", email = "wataru9871@gmail.com" }
]
dependencies = [ "hydra-core~=1.3.2", "webdataset~=0.2.57", "lightning-vocoders @ git+https://github.com/Wataru-Nakata/ssl-vocoders", "scikit-learn~=1.3.1", "pyreaper~=0.0.10", "pyworld~=0.3.4"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ipykernel~=6.25.2", "matplotlib~=3.8.0"]
[tool.hatch.metadata]
allow-direct-references = true
